<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp"
    android:radius="16dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_your_profile_to_get_the_best_experience"
            android:textSize="16sp"
            android:textAlignment="center"
            android:paddingBottom="16dp" />

        <Button
            android:id="@+id/btn_complete_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complete_now" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_for_now"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:paddingTop="12dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
