<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choisir_une_image"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prendre_une_photo"
        android:textColor="@color/onBackground"
        app:icon="@drawable/ic_camera"
        app:iconTint="@color/onBackground"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choisir_depuis_la_galerie"
        android:textColor="@color/onBackground"
        app:icon="@drawable/ic_gallery"
        app:iconTint="@color/onBackground"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>
